first half of page done

--- a/less/variables.less
+++ b/less/variables.less
@@ -2,11 +2,11 @@
 @titleFont: 'Playfair Display', serif;
 @subtitleFont: 'Anton', sans-serif;
 @mainFont: 'Spartan', sans-serif;
-@specialFont: 'Sacramento', cursive;
+@specialFont: 'Dancing Script', cursive;
 
 /*Colors*/
 @mainColor: rgb(117, 124, 87);
 @accentColor: #B1AD74;
-@secondAccentColor: #EEE8AA;
+@secondAccentColor: rgb(255, 249, 239);
 @thirdAccentColor: #E5A5A5;
-@bgColor: rgb(255, 249, 239);
+
