--- a/css/index.css
+++ b/css/index.css
@@ -91,20 +91,9 @@ video {
 /* Centering for nav */
 /* Reset for links */
 /* Background Image */
+/* Border on Main */
 /* Centering for Main */
 /* Paragraph */
-.TopOfPage {
-  background-color: #fff9ef;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-header {
-  color: #757c57;
-  font-size: 4rem;
-  font-family: 'Playfair Display', serif;
-  padding: 3%;
-}
 nav {
   height: 3vh;
   width: 35%;
@@ -119,8 +108,8 @@ nav a {
   align-items: center;
   text-decoration: none;
   letter-spacing: 0.1rem;
-  color: #E5A5A5;
-  font-size: 1rem;
+  color: black;
+  font-size: 1.3rem;
   font-family: 'Spartan', sans-serif;
   padding: 1.2%;
   width: 25%;
@@ -130,14 +119,49 @@ nav a:hover {
   border-radius: 10px;
   color: white;
 }
+html {
+  font-size: 62.5%;
+}
+.TopOfPage {
+  background-color: #fff9ef;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header {
+  color: #757c57;
+  font-size: 5rem;
+  font-family: 'Playfair Display', serif;
+  padding: 3%;
+}
 main {
   background-image: url('../photos/annie-spratt-hS46bsAASwQ-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
   height: 60vh;
-  opacity: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+main h2 {
+  font-family: 'Anton', sans-serif;
+  letter-spacing: 1.2rem;
+  font-size: 5.5rem;
+  color: white;
+  text-align: center;
+  width: 76%;
+  background: rgba(49, 49, 49, 0.65);
+}
+main p {
+  width: 75%;
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+  color: white;
+  letter-spacing: 0.2rem;
+  line-height: 3rem;
+  font-size: 1.3rem;
+  padding: 0% 3% 1%;
+  width: 70%;
+  background: rgba(49, 49, 49, 0.65);
 }
