--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,10 @@
+html{
+    font-size:62.5%;
+}
+
 
 .TopOfPage {
-    background-color: @bgColor;
+    background-color: @secondAccentColor;
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -8,36 +12,36 @@
 
 header {
     color: @mainColor;
-    font-size: 4rem;
+    font-size: 5rem;
     font-family: @titleFont;
     padding: 3%;
 }
-
-nav {
-    height: 3vh;
-    width: 35%;
-    margin: 2%;
-    display:flex;
-    justify-content: space-evenly;
-    a {
-        .centerNav();
-        .linkReset();
-        color: @thirdAccentColor;
-        font-size: 1rem;
-        font-family: @mainFont;
-        padding: 1.2%;
-        width:25%;
-        &:hover {
-            background-color: @mainColor;
-            border-radius: 10px;
-            color: white;
-        }//closes hover
-    }//closes a
-}//closes nav
 
 main {
     .backgroundImg();
     display:flex;
     flex-direction: column;
     .centerMain();
-}
+    h2 {
+        font-family: @subtitleFont;
+        letter-spacing: 1.2rem;
+        font-size: 5.5rem;
+        color: white;
+        text-align: center;
+        width:76%;
+        background: rgba(49, 49, 49, 0.65);
+    }//closes h2
+    p {
+        width:75%;
+        text-align: center;
+        font-family: @titleFont;
+        color:white;
+        letter-spacing: .2rem;
+        line-height: 3rem;
+        font-size: 1.3rem;
+        padding:0% 3% 1%;
+        width:70%;
+        background: rgba(49, 49, 49, 0.65);
+    }//closes p
+}//closes main
+
