--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,7 +18,12 @@
     background-repeat: no-repeat;
     background-size:100%;
     height: 60vh;
-    opacity: 80%;
+}
+
+/* Border on Main */
+.border(){
+    border-right: 2px solid white;
+    border-left: 2px solid white;
 }
 
 /* Centering for Main */
