--- a/css/index.css
+++ b/css/index.css
@@ -135,33 +135,78 @@ header {
   padding: 3%;
 }
 main {
-  background-image: url('../photos/annie-spratt-hS46bsAASwQ-unsplash.jpg');
+  background-image: url('../photos/nathan-fertig-U8zsjmKA840-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 60vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  height: 70vh;
 }
 main h2 {
   font-family: 'Anton', sans-serif;
-  letter-spacing: 1.2rem;
-  font-size: 5.5rem;
-  color: white;
+  letter-spacing: 1.5rem;
+  font-size: 6rem;
+  color: black;
   text-align: center;
   width: 76%;
-  background: rgba(49, 49, 49, 0.65);
+  background: rgba(158, 150, 135, 0.25);
 }
 main p {
   width: 75%;
   text-align: center;
   font-family: 'Playfair Display', serif;
-  color: white;
+  color: black;
   letter-spacing: 0.2rem;
   line-height: 3rem;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   padding: 0% 3% 1%;
   width: 70%;
-  background: rgba(49, 49, 49, 0.65);
+  background: rgba(158, 150, 135, 0.25);
+}
+.welcome {
+  height: 20vh;
+  margin: 0% 1% 1%;
+}
+.welcome h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 3rem;
+  width: 35%;
+  padding: 2%;
+  color: #757c57;
+}
+.welcome p {
+  padding: 1% 2%;
+  font-family: 'Spartan', sans-serif;
+  font-size: 1.5rem;
+}
+.welcome .buttonParent {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  margin: 2% 40%;
+  padding: 1%;
+  width: 15%;
+}
+.welcome .buttonParent a {
+  text-decoration: none;
+  letter-spacing: 0.1rem;
+  color: black;
+  font-family: 'Playfair Display', serif;
+  font-size: 1.2rem;
+}
+.welcome .buttonParent:hover {
+  color: white;
+  background-color: #B1AD74;
+  border: none;
+}
+footer {
+  background-color: #757c57;
+  height: 9vh;
+  display: flex;
+  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.5rem;
 }
