linked about and index page

--- a/less/main.less
+++ b/less/main.less
@@ -76,7 +76,6 @@ main {
             font-size: 1.2rem; 
         }
         &:hover {
-            color:white;
             background-color: @accentColor;
             border:none;
         }
@@ -90,3 +89,6 @@ footer {
     .centerNav();
     font-size: 1.5rem;
 }
+
+
+//////////////////////////// ABOUT PAGE ////////////////////////////
