--- a/less/mixins.less
+++ b/less/mixins.less
@@ -36,3 +36,10 @@
     font-family: @mainFont;
     color: @secondAccentColor;
 }
+
+/* Image Rows */
+.imgRow(){
+    width:100%;
+    height:30vh;
+    object-fit: cover;
+}
