--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,7 +8,8 @@ nav {
         .centerNav();
         .linkReset();
         color: black;
-        font-size: 1.3rem;
+        font-size: 1.4rem;
+        letter-spacing: .2rem;
         font-family: @mainFont;
         padding: 1.2%;
         width:25%;
