--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,7 @@ header {
     color: @mainColor;
     font-size: 5rem;
     font-family: @titleFont;
+    letter-spacing: .5rem;
     padding: 3%;
 }
 
@@ -23,7 +24,7 @@ main {
     display:flex;
     .centerMain();
     flex-direction: column;
-    height: 70vh;
+    height: 69vh;
     h2 {
         font-family: @subtitleFont;
         letter-spacing: 1.5rem;
@@ -47,48 +48,119 @@ main {
     }//closes p
 }//closes main
 
-.welcome {
-    height: 20vh;
-    margin: 0% 1% 1%;
-    h2 {
-        font-family: @titleFont;
-        font-size: 3rem;
-        width: 35%;
-        padding: 2%;
-        color: @mainColor;
-    }//closes h2
-    p {
-        padding: 1% 2%;
-        font-family: @mainFont;
-        font-size: 1.5rem;
-    }
-    .buttonParent{
-        display:flex;
-        justify-content: center;
-        border:1px solid black;
-        margin: 2% 40%;
-        padding:1%;
-        width:15%;
-        a{
-            .linkReset();
-            color:black;
+.row {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    height:45vh;
+    .welcome {
+        height: 20vh;
+        margin: 0% 1% 1% 2%;
+        h2 {
             font-family: @titleFont;
-            font-size: 1.2rem; 
+            font-size: 3rem;
+            width: 50%;
+            padding: 2%;
+            color: @mainColor;
+        }//closes h2
+        p {
+            padding: 1% 2%;
+            font-family: @mainFont;
+            font-size: 1.5rem;
+            line-height: 3rem;
         }
-        &:hover {
-            background-color: @accentColor;
-            border:none;
+        .buttonParent{
+            display:flex;
+            justify-content: center;
+            border:1px solid black;
+            margin: 2% 40%;
+            padding:1%;
+            width:15%;
+            a{
+                .linkReset();
+                color:black;
+                font-family: @titleFont;
+                font-size: 1.2rem; 
+            }
+            &:hover {
+                background-color: @accentColor;
+                border:none;
+            }
         }
+    }//closes .welcome
+    img {
+        justify-content: flex-end;
+        width:35%;
+        height:45vh;
     }
-}//closes .welcome
-
+}//closes row
 
 footer {
     background-color: @mainColor;
     height:9vh;
     .centerNav();
     font-size: 1.5rem;
+    color:@secondAccentColor;
 }
 
 
 //////////////////////////// ABOUT PAGE ////////////////////////////
+
+.appSummary {
+    background-color: @accentColor;
+    height:30vh;
+    .centerNav();
+    flex-direction: column;
+    padding:2% 5%;
+    h2 {
+        font-family: @subtitleFont;
+        font-size: 3rem;
+        letter-spacing: 1rem;
+        text-transform: uppercase;
+        color:@secondAccentColor;
+    }
+    p {
+        font-family: @mainFont;
+        color: @secondAccentColor;
+        font-size: 1.5rem;
+        line-height: 4rem;
+        
+    }
+}//closes .appSummary
+
+.succulents{
+    img{
+        .imgRow();
+    }
+}
+
+.planOne,.planTwo {
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 3% 0% 0%;
+    padding:2%;
+    h3 {
+        font-family: @titleFont;
+        font-size:3rem;
+    }
+    p {
+        font-family: @mainFont;
+        font-size: 2rem;
+        margin:1%;
+    }
+}
+
+.buttonParentTwo {
+    background-color: @mainColor;
+    width:20%;
+    padding:2%;
+    text-align: center;
+    margin: 0% 38%;
+    a{
+        .linkReset();
+        color:@secondAccentColor;
+        font-size: 2rem;
+        font-family: @mainFont;
+    }
+}
