--- a/less/mixins.less
+++ b/less/mixins.less
@@ -40,6 +40,21 @@
 /* Image Rows */
 .imgRow(){
     width:100%;
-    height:30vh;
+    height:31vh;
     object-fit: cover;
+}
+
+/* About Buttons */
+.aboutButtons(){
+    background-color: @mainColor;
+    width:20%;
+    padding:2%;
+    text-align: center;
+    margin: 2% 38%;
+    a{
+        .linkReset();
+        color:@secondAccentColor;
+        font-size: 2rem;
+        font-family: @mainFont;
+    }
 }
