--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,5 +18,8 @@ nav {
             border-radius: 10px;
             color: white;
         }//closes hover
+        @media @tablet {
+            font-size:1rem;
+        }
     }//closes a
 }//closes nav
