--- a/less/variables.less
+++ b/less/variables.less
@@ -9,3 +9,6 @@
 @secondAccentColor: rgb(255, 249, 239);
 @thirdAccentColor: #E5A5A5;
 
+// Media Queries 
+@tablet: ~"(max-width:1022px)";
+@mobile: ~"(max-width:500px)";
