--- a/css/index.css
+++ b/css/index.css
@@ -122,8 +122,14 @@ nav a:hover {
   border-radius: 10px;
   color: white;
 }
+@media (max-width:1022px) {
+  nav a {
+    font-size: 1rem;
+  }
+}
 html {
   font-size: 62.5%;
+  max-width: 1440px;
 }
 .TopOfPage {
   background-color: #fff9ef;
@@ -138,6 +144,11 @@ header {
   letter-spacing: 0.5rem;
   padding: 3%;
 }
+@media (max-width:1022px) {
+  header {
+    font-size: 2rem;
+  }
+}
 main {
   background-image: url('../photos/nathan-fertig-U8zsjmKA840-unsplash.jpg');
   background-repeat: no-repeat;
@@ -146,7 +157,12 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 69vh;
+  height: 49vh;
+}
+@media (max-width:1022px) {
+  main {
+    height: 30vh;
+  }
 }
 main h2 {
   font-family: 'Anton', sans-serif;
@@ -157,6 +173,11 @@ main h2 {
   width: 76%;
   background: rgba(158, 150, 135, 0.25);
 }
+@media (max-width:1022px) {
+  main h2 {
+    font-size: 2.5rem;
+  }
+}
 main p {
   width: 75%;
   text-align: center;
@@ -164,16 +185,27 @@ main p {
   color: black;
   letter-spacing: 0.2rem;
   line-height: 3rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding: 0% 3% 1%;
   width: 70%;
   background: rgba(158, 150, 135, 0.25);
+}
+@media (max-width:1022px) {
+  main p {
+    font-size: 1rem;
+    line-height: 2rem;
+  }
 }
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 45vh;
+}
+@media (max-width:1022px) {
+  .row {
+    height: 25vh;
+  }
 }
 .row .welcome {
   height: 20vh;
@@ -186,11 +218,21 @@ main p {
   padding: 2%;
   color: #757c57;
 }
+@media (max-width:1022px) {
+  .row .welcome h2 {
+    font-size: 1.7rem;
+  }
+}
 .row .welcome p {
   padding: 1% 2%;
   font-family: 'Spartan', sans-serif;
   font-size: 1.5rem;
   line-height: 3rem;
+}
+@media (max-width:1022px) {
+  .row .welcome p {
+    font-size: 1.1rem;
+  }
 }
 .row .welcome .buttonParent {
   display: flex;
@@ -200,12 +242,22 @@ main p {
   padding: 1%;
   width: 15%;
 }
+@media (max-width:1022px) {
+  .row .welcome .buttonParent {
+    width: 20%;
+  }
+}
 .row .welcome .buttonParent a {
   text-decoration: none;
   letter-spacing: 0.1rem;
   color: black;
   font-family: 'Playfair Display', serif;
   font-size: 1.2rem;
+}
+@media (max-width:1022px) {
+  .row .welcome .buttonParent a {
+    font-size: 0.5rem;
+  }
 }
 .row .welcome .buttonParent:hover {
   background-color: #B1AD74;
@@ -217,6 +269,11 @@ main p {
   height: 45vh;
   object-fit: cover;
 }
+@media (max-width:1022px) {
+  .row img {
+    height: 25vh;
+  }
+}
 footer {
   background-color: #757c57;
   height: 9vh;
@@ -226,6 +283,12 @@ footer {
   align-items: center;
   font-size: 1.5rem;
   color: #fff9ef;
+}
+@media (max-width:1022px) {
+  footer {
+    height: 4vh;
+    font-size: 1rem;
+  }
 }
 .appSummary {
   background-color: #B1AD74;
@@ -238,7 +301,7 @@ footer {
   padding: 2% 5%;
 }
 .appSummary h2 {
-  font-family: 'Anton', sans-serif;
+  font-family: 'Spartan', sans-serif;
   font-size: 3rem;
   letter-spacing: 1rem;
   text-transform: uppercase;
@@ -247,13 +310,13 @@ footer {
 .appSummary p {
   font-family: 'Spartan', sans-serif;
   color: #fff9ef;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   line-height: 4rem;
 }
 .appSummary h4 {
   font-family: 'Spartan', sans-serif;
   color: white;
-  font-size: 2rem;
+  font-size: 1.8rem;
   letter-spacing: 0.5rem;
 }
 .succulents img {
@@ -295,6 +358,10 @@ footer {
   color: #fff9ef;
   font-size: 2rem;
   font-family: 'Spartan', sans-serif;
+}
+.buttonParentTwo:hover,
+.buttonParentThree:hover {
+  background-color: #B1AD74;
 }
 .moreSucculents img {
   width: 100%;
