--- a/less/mixins.less
+++ b/less/mixins.less
@@ -57,4 +57,7 @@
         font-size: 2rem;
         font-family: @mainFont;
     }
+    &:hover {
+        background-color: @accentColor;
+    }
 }
