--- a/less/mixins.less
+++ b/less/mixins.less
@@ -56,6 +56,9 @@
         color:@secondAccentColor;
         font-size: 2rem;
         font-family: @mainFont;
+        @media @mobile {
+            font-size: 1rem;
+        }//closes media mobile
     }
     &:hover {
         background-color: @accentColor;
