--- a/css/index.css
+++ b/css/index.css
@@ -103,6 +103,17 @@ nav {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width:1022px) {
+  nav {
+    width: 50%;
+  }
+}
+@media (max-width:500px) {
+  nav {
+    width: 60%;
+    height: 2vh;
+  }
+}
 nav a {
   display: flex;
   justify-content: center;
@@ -124,7 +135,12 @@ nav a:hover {
 }
 @media (max-width:1022px) {
   nav a {
-    font-size: 1rem;
+    font-size: 0.5rem;
+  }
+}
+@media (max-width:500px) {
+  nav a {
+    font-size: 0.5rem;
   }
 }
 html {
@@ -161,7 +177,12 @@ main {
 }
 @media (max-width:1022px) {
   main {
-    height: 30vh;
+    height: 25vh;
+  }
+}
+@media (max-width:500px) {
+  main {
+    height: 20vh;
   }
 }
 main h2 {
@@ -176,6 +197,11 @@ main h2 {
 @media (max-width:1022px) {
   main h2 {
     font-size: 2.5rem;
+  }
+}
+@media (max-width:500px) {
+  main h2 {
+    font-size: 1.5rem;
   }
 }
 main p {
@@ -196,6 +222,12 @@ main p {
     line-height: 2rem;
   }
 }
+@media (max-width:500px) {
+  main p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
 .row {
   display: flex;
   justify-content: space-between;
@@ -207,9 +239,19 @@ main p {
     height: 25vh;
   }
 }
+@media (max-width:500px) {
+  .row {
+    height: 15vh;
+  }
+}
 .row .welcome {
   height: 20vh;
   margin: 0% 1% 1% 2%;
+}
+@media (max-width:500px) {
+  .row .welcome {
+    height: 12vh;
+  }
 }
 .row .welcome h2 {
   font-family: 'Playfair Display', serif;
@@ -223,6 +265,11 @@ main p {
     font-size: 1.7rem;
   }
 }
+@media (max-width:500px) {
+  .row .welcome h2 {
+    font-size: 1.2rem;
+  }
+}
 .row .welcome p {
   padding: 1% 2%;
   font-family: 'Spartan', sans-serif;
@@ -232,6 +279,13 @@ main p {
 @media (max-width:1022px) {
   .row .welcome p {
     font-size: 1.1rem;
+  }
+}
+@media (max-width:500px) {
+  .row .welcome p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: 0% 0% 4%;
   }
 }
 .row .welcome .buttonParent {
@@ -245,6 +299,12 @@ main p {
 @media (max-width:1022px) {
   .row .welcome .buttonParent {
     width: 20%;
+  }
+}
+@media (max-width:500px) {
+  .row .welcome .buttonParent {
+    width: 30%;
+    margin: 1% 33%;
   }
 }
 .row .welcome .buttonParent a {
@@ -274,6 +334,11 @@ main p {
     height: 25vh;
   }
 }
+@media (max-width:500px) {
+  .row img {
+    height: 15vh;
+  }
+}
 footer {
   background-color: #757c57;
   height: 9vh;
@@ -290,6 +355,12 @@ footer {
     font-size: 1rem;
   }
 }
+@media (max-width:500px) {
+  footer {
+    height: 2vh;
+    font-size: 0.8rem;
+  }
+}
 .appSummary {
   background-color: #B1AD74;
   height: 30vh;
@@ -300,6 +371,11 @@ footer {
   flex-direction: column;
   padding: 2% 5%;
 }
+@media (max-width:500px) {
+  .appSummary {
+    height: 20vh;
+  }
+}
 .appSummary h2 {
   font-family: 'Spartan', sans-serif;
   font-size: 3rem;
@@ -307,11 +383,22 @@ footer {
   text-transform: uppercase;
   color: #fff9ef;
 }
+@media (max-width:500px) {
+  .appSummary h2 {
+    font-size: 1.3rem;
+  }
+}
 .appSummary p {
   font-family: 'Spartan', sans-serif;
   color: #fff9ef;
   font-size: 1.6rem;
   line-height: 4rem;
+}
+@media (max-width:500px) {
+  .appSummary p {
+    font-size: 1rem;
+    line-height: 2rem;
+  }
 }
 .appSummary h4 {
   font-family: 'Spartan', sans-serif;
@@ -319,10 +406,21 @@ footer {
   font-size: 1.8rem;
   letter-spacing: 0.5rem;
 }
+@media (max-width:500px) {
+  .appSummary h4 {
+    font-size: 1rem;
+    letter-spacing: normal;
+  }
+}
 .succulents img {
   width: 100%;
   height: 31vh;
   object-fit: cover;
+}
+@media (max-width:500px) {
+  .succulents img {
+    height: 15vh;
+  }
 }
 .planOne,
 .planTwo {
@@ -337,11 +435,23 @@ footer {
   font-family: 'Playfair Display', serif;
   font-size: 3rem;
 }
+@media (max-width:500px) {
+  .planOne h3,
+  .planTwo h3 {
+    font-size: 2rem;
+  }
+}
 .planOne p,
 .planTwo p {
   font-family: 'Spartan', sans-serif;
   font-size: 2rem;
   margin: 2% 0% 0%;
+}
+@media (max-width:500px) {
+  .planOne p,
+  .planTwo p {
+    font-size: 1.3rem;
+  }
 }
 .buttonParentTwo,
 .buttonParentThree {
@@ -359,6 +469,12 @@ footer {
   font-size: 2rem;
   font-family: 'Spartan', sans-serif;
 }
+@media (max-width:500px) {
+  .buttonParentTwo a,
+  .buttonParentThree a {
+    font-size: 1rem;
+  }
+}
 .buttonParentTwo:hover,
 .buttonParentThree:hover {
   background-color: #B1AD74;
@@ -367,4 +483,9 @@ footer {
   width: 100%;
   height: 31vh;
   object-fit: cover;
+}
+@media (max-width:500px) {
+  .moreSucculents img {
+    height: 15vh;
+  }
 }
