--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,6 @@
 html{
     font-size:62.5%;
-    max-width:1440px;
+    // max-width:1440px;
 }
 
 .TopOfPage {
@@ -197,7 +197,8 @@ footer {
     p {
         font-family: @mainFont;
         color: @secondAccentColor;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
+        letter-spacing: .2rem;
         line-height: 4rem;
         @media @mobile {
             font-size: 1rem;
@@ -208,8 +209,11 @@ footer {
     h4 {
         font-family:@mainFont;
         color:white;
-        font-size: 1.8rem;
+        font-size: 1.4rem;
         letter-spacing: .5rem;
+        @media @tablet{
+            font-size: 1.1rem;
+        }//closes media tablet
         @media @mobile {
             font-size: 1rem;
             letter-spacing: normal;
@@ -226,32 +230,39 @@ footer {
     }
 }
 
-.planOne,.planTwo {
+.planRow{
     display:flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 1% 0% 0%;
-    padding:1%;
-    h3 {
-        font-family: @titleFont;
-        font-size:3rem;
-        @media @mobile {
-            font-size: 2rem;
-        }//closes media mobile
-    }
-    p {
-        font-family: @mainFont;
-        font-size: 2rem;
-        margin:2% 0% 0%;
-        @media @mobile {
-            font-size: 1.3rem;
-        }//closes media mobile  
-    }
-}
+    justify-content: center;
 
-.buttonParentTwo,.buttonParentThree {
-    .aboutButtons();
-}
+    .planOne,.planTwo {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1%;
+        padding:1%;
+        h3 {
+            font-family: @titleFont;
+            font-size:3rem;
+            @media @mobile {
+                font-size: 2rem;
+            }//closes media mobile
+        }
+        p {
+            font-family: @mainFont;
+            text-align: center;
+            font-size: 1.6rem;
+            margin:5% 0%;
+            @media @tablet {
+                font-size: 1.3rem;
+            }
+        }
+    }//closes plans
+
+    .buttonParentTwo,.buttonParentThree {
+        
+        .aboutButtons();
+    }//closes buttons
+}//closes planRow
 
 .moreSucculents {
     img {
