--- a/less/mixins.less
+++ b/less/mixins.less
@@ -74,3 +74,10 @@
         background-color: @accentColor;
     }
 }
+
+/* Animation */
+.animate(){
+    animation: fadeInAnimation ease 6s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
