compressed main image to smaller file

--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,7 @@ header {
   }
 }
 main {
-  background-image: url('../photos/nathan-fertig-U8zsjmKA840-unsplash (1).jpg');
+  background-image: url('../photos/main.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
   display: flex;
