--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,7 +14,7 @@
 
 /* Background Image */
 .backgroundImg(){
-    background-image: url('../photos/nathan-fertig-U8zsjmKA840-unsplash (1).jpg');
+    background-image: url('../photos/main.jpg');
     background-repeat: no-repeat;
     background-size:100%;
 }
