--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,6 +17,7 @@
     background-image: url('../photos/main.jpg');
     background-repeat: no-repeat;
     background-size:100%;
+    background-attachment: fixed;
 }
 
 /* Border on Main */
