--- a/less/mixins.less
+++ b/less/mixins.less
@@ -82,3 +82,19 @@
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+
+
+/* Facebook */
+.fa-facebook() {
+    color: @secondAccentColor;
+  }
+  
+  /* Twitter */
+  .fa-twitter() {
+    color: @secondAccentColor;
+  }
+
+  /* Instagram */
+  .fa-instagram() {
+      color:@secondAccentColor
+  }
