--- a/css/index.css
+++ b/css/index.css
@@ -97,6 +97,9 @@ video {
 /* Image Rows */
 /* About Buttons */
 /* Animation */
+/* Facebook */
+/* Twitter */
+/* Instagram */
 nav {
   height: 3vh;
   width: 35%;
@@ -359,9 +362,29 @@ footer {
   height: 9vh;
   display: flex;
   justify-content: center;
-  justify-content: space-evenly;
   align-items: center;
   font-size: 1.5rem;
+  letter-spacing: 0.8rem;
+  color: #fff9ef;
+}
+footer .fa {
+  padding: 20px;
+  font-size: 2rem;
+  width: 0.5%;
+  text-decoration: none;
+}
+@media (max-width:500px) {
+  footer .fa {
+    font-size: 1rem;
+  }
+}
+footer .fa-facebook {
+  color: #fff9ef;
+}
+footer .fa-twitter {
+  color: #fff9ef;
+}
+footer .fa-instagram {
   color: #fff9ef;
 }
 @media (max-width:1023px) {
@@ -445,6 +468,7 @@ footer {
   width: 100%;
   height: 31vh;
   object-fit: cover;
+  background-attachment: fixed;
 }
 @media (max-width:500px) {
   .succulents img {
