--- a/less/main.less
+++ b/less/main.less
@@ -94,7 +94,11 @@ main {
     }//closes media mobile
     .welcome {
         height: 20vh;
-        margin: 0% 1% 1% 2%;
+        // margin: 0% 1% 1% 2%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0% 0% 0% 1%;
         @media @mobile {
             height: 12vh;
         }//closes media mobile
