--- a/css/index.css
+++ b/css/index.css
@@ -191,7 +191,7 @@ main {
 }
 @media (max-width:500px) {
   main {
-    height: 20vh;
+    height: 15vh;
   }
 }
 main h2 {
@@ -261,7 +261,10 @@ main p {
 }
 .row .welcome {
   height: 20vh;
-  margin: 0% 1% 1% 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0% 0% 0% 1%;
 }
 @media (max-width:500px) {
   .row .welcome {
